refactor: use april tags instead of hardcoded values